# oneiros

./: .gitignore  CLAUDE.md  GETTING_STARTED.md  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
docs/findings/: 2026-07-23-first-run.md  README.md
docs/todos/: README.md
docs/todos/active/: blend-weight-gradient.md  feedback-loop.md  image-generation.md  narrative-interpretation.md  narrative-latent-influence.md  noise-generator.md
docs/todos/completed/: feedback-loop.md  image-generation.md  narrative-interpretation.md  noise-generator.md
oneiros/: imagery.py  loop.py  narrative.py  noise.py
scripts/: dream.py  verify_imagery.py  verify_narrative.py  verify_noise.py
